bn misc identifiers

--- a/bn/misc/h4.bn.md
+++ b/bn/misc/h4.bn.md
@@ -1,20 +1,30 @@
 {
-  "date" : "2022-01-28",
-  "keywords" : [ "h4 file", "h4 file format", "what is an h4 file", "file", "h4 example", "h4 file extension","extension", "format" ],
-  "author" : {
-    "display_name" : "Kashif Iqbal"
-},
-  "draft" : "false",
-  "toc" : true,
-  "title" : "H4 ফাইল - হায়ারার্কিক্যাল ডেটা ফরম্যাট 4 ফাইল",
-  "description":"H4 ফাইল এবং API সম্পর্কে জানুন যেগুলি H4 ফাইল তৈরি এবং খুলতে পারে।",
-  "linktitle" : "H4",
-  "menu" : {
-    "docs" : {
-      "parent" : "misc"
-}
-},
-  "lastmod" : "2022-01-28"
+  "date": "2022-01-28",
+  "keywords": [
+    "h4 file",
+    "h4 file format",
+    "what is an h4 file",
+    "file",
+    "h4 example",
+    "h4 file extension",
+    "extension",
+    "format"
+  ],
+  "author": {
+    "display_name": "Kashif Iqbal"
+  },
+  "draft": "false",
+  "toc": true,
+  "title": "H4 ফাইল - হায়ারার্কিক্যাল ডেটা ফরম্যাট 4 ফাইল",
+  "description": "H4 ফাইল এবং API সম্পর্কে জানুন যেগুলি H4 ফাইল তৈরি এবং খুলতে পারে।",
+  "linktitle": "H4",
+  "menu": {
+    "docs": {
+      "parent": "misc",
+      "identifier": "misc-h4-bn"
+    }
+  },
+  "lastmod": "2022-01-28"
 }
 
 ## একটি H4 ফাইল কি?
