--- a/bn/programming/g4.bn.md
+++ b/bn/programming/g4.bn.md
@@ -1,20 +1,29 @@
 {
-  "date" : "2021-08-05",
-  "keywords" : [ "g4", "g4 file", "g4 file extension", "g4 file format", "antlr", "antlr language", "programming"],
-  "author" : {
-    "display_name" : "Muhammad Umar"
-},
-  "draft" : "false",
-  "toc" : true,
-  "description":"G4 ফাইল ফরম্যাট এবং API সম্পর্কে জানুন যা G4 ফাইল তৈরি এবং খুলতে পারে।",
-  "title" : "G4 - ANTLR কোড ফাইল",
-  "linktitle" : "G4",
-  "menu" : {
-    "docs" : {
-      "parent" : "programming"
-}
-},
-  "lastmod" : "2021-08-05"
+  "date": "2021-08-05",
+  "keywords": [
+    "g4",
+    "g4 file",
+    "g4 file extension",
+    "g4 file format",
+    "antlr",
+    "antlr language",
+    "programming"
+  ],
+  "author": {
+    "display_name": "Muhammad Umar"
+  },
+  "draft": "false",
+  "toc": true,
+  "description": "G4 ফাইল ফরম্যাট এবং API সম্পর্কে জানুন যা G4 ফাইল তৈরি এবং খুলতে পারে।",
+  "title": "G4 - ANTLR কোড ফাইল",
+  "linktitle": "G4",
+  "menu": {
+    "docs": {
+      "parent": "programming",
+      "identifier": "programming-g4-bn"
+    }
+  },
+  "lastmod": "2021-08-05"
 }
 
 ## একটি G4 ফাইল কি? 
