bn publisher, reporting, spreadheet identifiers

--- a/bn/spreadsheet/123.bn.md
+++ b/bn/spreadsheet/123.bn.md
@@ -1,20 +1,28 @@
 {
-  "date" : "2019-12-16",
-  "keywords" : [ "Lotus 123", "file", "extension", "file format", "Excel", "Spreadsheet" ],
-  "author" : {
-    "display_name" : "Kashif Iqbal"
-},
-  "draft" : "false",
-  "toc" : true,
-  "description" : "একটি Lotus 123 ফাইল এবং APIs যা 123 ফাইল তৈরি এবং খুলতে পারে তা জানতে আপনার ফাইল ফরম্যাট গাইড।",
-  "title" : "Lotus 123 ফাইল ফরম্যাট কি? ফাইল ফরম্যাট বিশেষজ্ঞদের কাছ থেকে শিখুন!",
-  "linktitle" : "123",
-  "menu" : {
-    "docs" : {
-      "parent" : "spreadsheet"
-}
-},
-  "lastmod" : "2021-06-27"
+  "date": "2019-12-16",
+  "keywords": [
+    "Lotus 123",
+    "file",
+    "extension",
+    "file format",
+    "Excel",
+    "Spreadsheet"
+  ],
+  "author": {
+    "display_name": "Kashif Iqbal"
+  },
+  "draft": "false",
+  "toc": true,
+  "description": "একটি Lotus 123 ফাইল এবং APIs যা 123 ফাইল তৈরি এবং খুলতে পারে তা জানতে আপনার ফাইল ফরম্যাট গাইড।",
+  "title": "Lotus 123 ফাইল ফরম্যাট কি? ফাইল ফরম্যাট বিশেষজ্ঞদের কাছ থেকে শিখুন!",
+  "linktitle": "123",
+  "menu": {
+    "docs": {
+      "parent": "spreadsheet",
+      "identifier": "spreadsheet-123-bn"
+    }
+  },
+  "lastmod": "2021-06-27"
 }
 
 ## একটি Lotus 123 ফাইল কি?
