--- a/bn/spreadsheet/12m.bn.md
+++ b/bn/spreadsheet/12m.bn.md
@@ -1,19 +1,20 @@
 {
-  "date" : "2022-06-13",
-  "author" : {
-    "display_name" : "Kashif Iqbal"
-},
-  "draft" : "false",
-  "toc" : true,
-  "description" : "একটি Lotus 123 12M ফাইল এবং API গুলি যা 12M ফাইল তৈরি এবং খুলতে পারে তা জানতে আপনার ফাইল বিন্যাস নির্দেশিকা৷",
-  "title" : "12M ফাইল ফরম্যাট - Lotus 1-2-3 SmartMaster ফাইল",
-  "linktitle" : "12M",
-  "menu" : {
-    "docs" : {
-      "parent" : "spreadsheet"
-}
-},
-  "lastmod" : "2022-06-13"
+  "date": "2022-06-13",
+  "author": {
+    "display_name": "Kashif Iqbal"
+  },
+  "draft": "false",
+  "toc": true,
+  "description": "একটি Lotus 123 12M ফাইল এবং API গুলি যা 12M ফাইল তৈরি এবং খুলতে পারে তা জানতে আপনার ফাইল বিন্যাস নির্দেশিকা৷",
+  "title": "12M ফাইল ফরম্যাট - Lotus 1-2-3 SmartMaster ফাইল",
+  "linktitle": "12M",
+  "menu": {
+    "docs": {
+      "parent": "spreadsheet",
+      "identifier": "spreadsheet-12m-bn"
+    }
+  },
+  "lastmod": "2022-06-13"
 }
 
 ## একটি Lotus 12M ফাইল কি?
