--- a/en/3d/3D2.md
+++ b/en/3d/3D2.md
@@ -1,20 +1,30 @@
 {
-  "date" : "2019-10-11",
-  "keywords" : [ "3d2 file", "3d2 file format", "what is an 3d2 file", "file", "3d2 example", "3d2 file extension","extension", "format" ],
-  "author" : {
-    "display_name" : "Kashif Iqbal"
+  "date": "2019-10-11",
+  "keywords": [
+    "3d2 file",
+    "3d2 file format",
+    "what is an 3d2 file",
+    "file",
+    "3d2 example",
+    "3d2 file extension",
+    "extension",
+    "format"
+  ],
+  "author": {
+    "display_name": "Kashif Iqbal"
   },
-  "draft" : "false",
-  "toc" : true,
-  "description":"Learn about 3D2 file format and APIs that can open and create 3D2 files.",
-  "title" : "3D2 - CAD-3D 2.0 File Format",
-  "linktitle" : "3D2",
-  "menu" : {
-    "docs" : {
-      "parent" : "3d"
+  "draft": "false",
+  "toc": true,
+  "description": "Learn about 3D2 file format and APIs that can open and create 3D2 files.",
+  "title": "3D2 - CAD-3D 2.0 File Format",
+  "linktitle": "3D2",
+  "menu": {
+    "docs": {
+      "parent": "3d",
+      "identifier": "3d-3D2"
     }
   },
-  "lastmod" : "2019-09-10"
+  "lastmod": "2019-09-10"
 }
 
 ## What is a 3D2 file?
