--- a/en/3d/e57.md
+++ b/en/3d/e57.md
@@ -1,20 +1,30 @@
 {
-  "date" : "2021-02-01",
-  "keywords" : [ "e57 file", "e57 file format", "what is an e57 file", "file", "e57 example", "e57 file extension","extension", "format" ],
-  "author" : {
-    "display_name" : "Kashif Iqbal"
+  "date": "2021-02-01",
+  "keywords": [
+    "e57 file",
+    "e57 file format",
+    "what is an e57 file",
+    "file",
+    "e57 example",
+    "e57 file extension",
+    "extension",
+    "format"
+  ],
+  "author": {
+    "display_name": "Kashif Iqbal"
   },
-  "draft" : "false",
-  "toc" : true,
-  "description":"Learn about E57 file format and APIs that can open and create E57 files.",
-  "title" : "E57 - Lidar Point Cloud Data Format",
-  "linktitle" : "E57",
-  "menu" : {
-    "docs" : {
-      "parent" : "3d"
+  "draft": "false",
+  "toc": true,
+  "description": "Learn about E57 file format and APIs that can open and create E57 files.",
+  "title": "E57 - Lidar Point Cloud Data Format",
+  "linktitle": "E57",
+  "menu": {
+    "docs": {
+      "parent": "3d",
+      "identifier": "3d-e57"
     }
   },
-  "lastmod" : "2021-02-01"
+  "lastmod": "2021-02-01"
 }
 
 ## What is an E57 file?
