en audio identifiers

--- a/en/audio/rf64.md
+++ b/en/audio/rf64.md
@@ -1,20 +1,32 @@
 {
-  "date" : "2021-08-06",
-  "keywords" : [ "rf64", "file", "extension", "format", "Audio", "RIFF64 broadcast wave", "rf64 extension", "rf64 files", "RIFF64","Winamp" ],
-  "author" : {
-    "display_name" : "Sami Cheema"
+  "date": "2021-08-06",
+  "keywords": [
+    "rf64",
+    "file",
+    "extension",
+    "format",
+    "Audio",
+    "RIFF64 broadcast wave",
+    "rf64 extension",
+    "rf64 files",
+    "RIFF64",
+    "Winamp"
+  ],
+  "author": {
+    "display_name": "Sami Cheema"
   },
-  "draft" : "false",
-  "toc" : true,
-  "description" : "Learn about RF64 file format and APIs that can create and open RF64 files.",
-  "title" : "RF64 - 8Bit Sampled Voice File Format",
-  "linktitle" : "RF64",
-  "menu" : {
-    "docs" : {
-      "parent" : "audio"
+  "draft": "false",
+  "toc": true,
+  "description": "Learn about RF64 file format and APIs that can create and open RF64 files.",
+  "title": "RF64 - 8Bit Sampled Voice File Format",
+  "linktitle": "RF64",
+  "menu": {
+    "docs": {
+      "parent": "audio",
+      "identifier": "audio-rf64"
     }
   },
-  "lastmod" : "2021-08-06"
+  "lastmod": "2021-08-06"
 }
 
 ## What is an RF64 file? ##
