en publisher, reporting, spreadsheet, system

--- a/en/spreadsheet/123.md
+++ b/en/spreadsheet/123.md
@@ -1,20 +1,28 @@
 {
-  "date" : "2019-12-16",
-  "keywords" : [ "Lotus 123", "file", "extension", "file format", "Excel", "Spreadsheet" ],
-  "author" : {
-    "display_name" : "Kashif Iqbal"
+  "date": "2019-12-16",
+  "keywords": [
+    "Lotus 123",
+    "file",
+    "extension",
+    "file format",
+    "Excel",
+    "Spreadsheet"
+  ],
+  "author": {
+    "display_name": "Kashif Iqbal"
   },
-  "draft" : "false",
-  "toc" : true,
-  "description" : "Your file format guide to know what is a Lotus 123 file and APIs that can create and open 123 file.",
-  "title" : "What is Lotus 123 file format? Learn from File Format Experts!",
-  "linktitle" : "123",
-  "menu" : {
-    "docs" : {
-      "parent" : "spreadsheet"
+  "draft": "false",
+  "toc": true,
+  "description": "Your file format guide to know what is a Lotus 123 file and APIs that can create and open 123 file.",
+  "title": "What is Lotus 123 file format? Learn from File Format Experts!",
+  "linktitle": "123",
+  "menu": {
+    "docs": {
+      "parent": "spreadsheet",
+      "identifier": "spreadsheet-123"
     }
   },
-  "lastmod" : "2021-06-27"
+  "lastmod": "2021-06-27"
 }
 
 ## What is a Lotus 123 file?
