--- a/en/spreadsheet/12m.md
+++ b/en/spreadsheet/12m.md
@@ -1,19 +1,20 @@
 {
-  "date" : "2022-06-13",
-  "author" : {
-    "display_name" : "Kashif Iqbal"
+  "date": "2022-06-13",
+  "author": {
+    "display_name": "Kashif Iqbal"
   },
-  "draft" : "false",
-  "toc" : true,
-  "description" : "Your file format guide to know what is a Lotus 123 12M file and APIs that can create and open 12M file.",
-  "title" : "12M File Format - Lotus 1-2-3 SmartMaster File",
-  "linktitle" : "12M",
-  "menu" : {
-    "docs" : {
-      "parent" : "spreadsheet"
+  "draft": "false",
+  "toc": true,
+  "description": "Your file format guide to know what is a Lotus 123 12M file and APIs that can create and open 12M file.",
+  "title": "12M File Format - Lotus 1-2-3 SmartMaster File",
+  "linktitle": "12M",
+  "menu": {
+    "docs": {
+      "parent": "spreadsheet",
+      "identifier": "spreadsheet-12m"
     }
   },
-  "lastmod" : "2022-06-13"
+  "lastmod": "2022-06-13"
 }
 
 ## What is a Lotus 12M file?
