Fixed broken absolute URLs

--- a/da/compression/r2.da.md
+++ b/da/compression/r2.da.md
@@ -58,6 +58,6 @@ Formatet på et WinRAR multi-volume arkiv er RAR (Roshal Archive). RAR er et pro
 RAR-formatet understøtter komprimering og arkivering af flere filer og mapper til en enkelt arkivfil. Når et stort arkiv er opdelt i flere enheder ved hjælp af WinRAR, tildeles hvert bind typisk en unik filtypenavn, såsom .rar, .r00, .r01 og så videre. Disse individuelle volumenfiler danner tilsammen multi-volumens arkiv.
 
 ## Referencer
-* [RAR (filformat)](https://en.wikipedia.org/wiki/RAR_(filformat))
+* [RAR (filformat)](https://en.wikipedia.org/wiki/RAR_(file_format))
 
 
