--- a/da/gis/000.da.md
+++ b/da/gis/000.da.md
@@ -36,14 +36,10 @@ S-57-modellen definerer hydrografisk information ved hjælp af en kombination af
 
 ### S-57 funktioner og attributter
 
-En enkelt S-57-fil kan indeholde mere end 100 lag. Funktioner i en S-57-fil tildeles et lag baseret på navnet på objektklassen (OBJL). Hver funktionstype i en S-57-fil har et foruddefineret sæt attributter som defineret af S-57-standarden. Disse er korte navne, der kan relateres til længere, mere meningsfulde navne ved hjælp af [S-57 object/attribute catalog](http://www.s-57.com).
+En enkelt S-57-fil kan indeholde mere end 100 lag. Funktioner i en S-57-fil tildeles et lag baseret på navnet på objektklassen (OBJL). Hver funktionstype i en S-57-fil har et foruddefineret sæt attributter som defineret af S-57-standarden. Disse er korte navne, der kan relateres til længere, mere meningsfulde navne ved hjælp af S-57 object/attribute catalog.
 
 For eksempel kan lufthavnsobjektklassen (AIRARE) have attributterne AIRARE, CATAIR, CONDTN, CONVIS, NOBJNM, OBJNAM, STATUS, INFORM, NINFOM, NTXTDS, PICREP, SCAMAX, SCAMIN, TXTDSC, RECDAT, RECIND, SORDAT og SORIND. De mere meningsfulde navne på disse korte navne kan findes i S-57-dokumentet eller S-57-objekt-/attributkataloget.
 
 ## Referencer
 
 * [IHO S57 ENC](https://gdal.org/drivers/vector/s57.html)
-
-* [S57 Objects and Attributes Catalog](http://www.s-57.com)
-
-
