Fixed relative urls

--- a/da/misc/h4.da.md
+++ b/da/misc/h4.da.md
@@ -49,7 +49,7 @@ HDF4- eller H4-fil er som en container, der består af heterogene dataobjekter. 
  * Tabeller
  * Tekstelementer
  * Grafer
- * Dokumenter såsom [PDF](/pdf/) og [Excel-dokumenter](/regneark/)
+ * Dokumenter såsom [PDF](/pdf/) og [Excel-dokumenter](/spreadsheet/)
 
 ## H4 filfremviser
 
