Fixed identifier and urls

--- a/da/compression/b1.da.md
+++ b/da/compression/b1.da.md
@@ -29,15 +29,15 @@ B1 Free Archiver understøtter følgende filformater.
 
 *b1
 
-* [zip](/komprimering/zip/)
+* [zip](/compression/zip/)
 
-* [jar](/programmering/jar/)
+* [jar](/programming/jar/)
 
 * xpi
 
-* [rar](/komprimering/rar/)
+* [rar](/compression/rar/)
 
-* [7z](/komprimering/7z/)
+* [7z](/compression/7z/)
 
 * [arj](/compression/arj/)
 
@@ -59,13 +59,13 @@ B1 Free Archiver understøtter følgende filformater.
 
 * [lzma](/compression/lzma/)
 
-* [rpm](/komprimering/rpm/)
+* [rpm](/compression/rpm/)
 
 * [tar](/compression/tar/)
 
-* [xar](/komprimering/xar/)
+* [xar](/compression/xar/)
 
-* [z](/komprimering/z/)
+* [z](/compression/z/)
 
 * [dmg](/compression/dmg/) og andre.
 
