--- a/en/gis/000.md
+++ b/en/gis/000.md
@@ -36,11 +36,10 @@ The S-57 model defines hydrographic information using a combination of descripti
 
 ### S-57 Features and Attributes
 
-A single S-57 file may contain more than 100 layers. Features in an S-57 file are assigned to a layer based on the name of the object class (OBJL). Each feature type in an S-57 file has a predefined set of attributes as defined by the S-57 standard. These are short names that can be related to longer, more meaningful names using the [S-57 object/attribute catalog](http://www.s-57.com).
+A single S-57 file may contain more than 100 layers. Features in an S-57 file are assigned to a layer based on the name of the object class (OBJL). Each feature type in an S-57 file has a predefined set of attributes as defined by the S-57 standard. These are short names that can be related to longer, more meaningful names using the S-57 object/attribute catalog.
 
 For example, airport (AIRARE) object class can have the AIRARE, CATAIR, CONDTN, CONVIS, NOBJNM, OBJNAM, STATUS, INFORM, NINFOM, NTXTDS, PICREP, SCAMAX, SCAMIN, TXTDSC, RECDAT, RECIND, SORDAT, and SORIND attributes. The more meaningful names of these short names can be found in the S-57 document or the S-57 object/attribute catalog.
 
 ## References
 
 * [IHO S57 ENC](https://gdal.org/drivers/vector/s57.html)
-* [S57 Objects and Attributes Catalog](http://www.s-57.com)
