--- a/fa/gis/000.fa.md
+++ b/fa/gis/000.fa.md
@@ -36,14 +36,10 @@
 
 ### ویژگی ها و ویژگی های S-57
 
-یک فایل S-57 ممکن است بیش از 100 لایه داشته باشد. ویژگی های یک فایل S-57 بر اساس نام کلاس شی (OBJL) به یک لایه اختصاص داده می شود. هر نوع ویژگی در فایل S-57 دارای مجموعه ای از ویژگی های از پیش تعریف شده است که توسط استاندارد S-57 تعریف شده است. اینها نام‌های کوتاهی هستند که می‌توانند با استفاده از [S-57 object/attribute catalog](http://www.s-57.com) به نام‌های طولانی‌تر و معنی‌دار مرتبط شوند.
+یک فایل S-57 ممکن است بیش از 100 لایه داشته باشد. ویژگی های یک فایل S-57 بر اساس نام کلاس شی (OBJL) به یک لایه اختصاص داده می شود. هر نوع ویژگی در فایل S-57 دارای مجموعه ای از ویژگی های از پیش تعریف شده است که توسط استاندارد S-57 تعریف شده است. اینها نام‌های کوتاهی هستند که می‌توانند با استفاده از S-57 object/attribute catalog به نام‌های طولانی‌تر و معنی‌دار مرتبط شوند.
 
 برای مثال، کلاس شی فرودگاه (AIRARE) می‌تواند دارای ویژگی‌های AIRARE، CATAIR، CONDTN، CONVIS، NOBJNM، OBJNAM، STATUS، INFORM، NINFOM، NTXTDS، PICREP، SCAMAX، SCAMIN، TXTDSC، RECDATSOATSOATRIND، RECINDRI، و . نام‌های معنی‌دارتر این نام‌های کوتاه را می‌توان در سند S-57 یا کاتالوگ شی/ویژگی S-57 یافت.
 
 ## منابع
 
 * [IHO S57 ENC](https://gdal.org/drivers/vector/s57.html)
-
-* [کاتالوگ اشیاء و ویژگی های S57](http://www.s-57.com)
-
-
