Fixed relative URLs

--- a/fi/compression/b1.fi.md
+++ b/fi/compression/b1.fi.md
@@ -28,46 +28,26 @@ B1-tiedostomuoto on avoin arkistomuoto, joka yhdistää parhaat todistetut ratka
 B1 Free Archiver tukee seuraavia tiedostomuotoja.
 
 * b1
-
-* [zip](/pakkaus/zip/)
-
-* [purkki](/ohjelmointi/jar/)
-
+* [zip](/compression/zip/)
+* [jar](/programming/jar/)
 * xpi
-
-* [rar](/pakkaus/rar/)
-
-* [7z](/pakkaus/7z/)
-
-* [arj](/pakkaus/arj/)
-
-* [bz2](/pakkaus/bz2/)
-
-* taksi
-
+* [rar](/compression/rar/)
+* [7z](/compression/7z/)
+* [arj](/compression/arj/)
+* [bz2](/compression/bz2/)
+* cab
 * [deb](/compression/deb/)
-
-* [gzip](/pakkaus/gzip/)
-
-* [tgz](/pakkaus/tgz/)
-
-*iso
-
-* [lzh](/pakkaus/lzh/)
-
-*haha
-
-* [lzma](/pakkaus/lzma/)
-
-* [rpm](/pakkaus/rpm/)
-
-* [terva](/pakkaus/terva/)
-
-* [xar](/pakkaus/xar/)
-
-* [z](/pakkaus/z/)
-
-* [dmg](/compression/dmg/) ja muut.
+* [gzip](/compression/gzip/)
+* [tgz](/compression/tgz/)
+* iso
+* [lzh](/compression/lzh/)
+* lha
+* [lzma](/compression/lzma/)
+* [rpm](/compression/rpm/)
+* [tar](/compression/tar/)
+* [xar](/compression/xar/)
+* [z](/compression/z/)
+* [dmg](/compression/dmg/) and others.
 
 
 B1-tiedostot voidaan suojata salasanalla ja ne pakataan oletusarvoisesti LZMA-pakkauksella (Lempel-Ziv-Markov chain Algorithm).
