--- a/ga/compression/b1.ga.md
+++ b/ga/compression/b1.ga.md
@@ -28,47 +28,26 @@ Is formáid chartlainne oscailte í formáid comhaid B1 a chomhcheanglaíonn na 
 Tacaíonn B1 Free Archiver leis na formáidí comhaid seo a leanas.
 
 * b1
-
-* [zip] (/compression/zip/)
-
-* [próca](/clárú/próca/)
-
+* [zip](/compression/zip/)
+* [jar](/programming/jar/)
 * xpi
-
 * [rar](/compression/rar/)
-
-* [7z](/comhbhrú/7z/)
-
+* [7z](/compression/7z/)
 * [arj](/compression/arj/)
-
 * [bz2](/compression/bz2/)
-
-* tacsaí
-
-* [deb] (/compression/deb/)
-
-* [gzip] (/compression/gzip/)
-
+* cab
+* [deb](/compression/deb/)
+* [gzip](/compression/gzip/)
 * [tgz](/compression/tgz/)
-
-*iso
-
+* iso
 * [lzh](/compression/lzh/)
-
 * lha
-
 * [lzma](/compression/lzma/)
-
 * [rpm](/compression/rpm/)
-
 * [tar](/compression/tar/)
-
 * [xar](/compression/xar/)
-
 * [z](/compression/z/)
-
-* [dmg] (/compression/dmg/) agus daoine eile.
-
+* [dmg](/compression/dmg/) and others. 
 
 Is féidir comhaid B1 a chosaint ag pasfhocal agus iad a chomhbhrú trí úsáid a bhaint as comhbhrú LZMA (Algartam slabhra Lempel-Ziv-Markov) de réir réamhshocraithe.
 
