Fixed Absolute URLs

--- a/ga/gis/000.ga.md
+++ b/ga/gis/000.ga.md
@@ -36,14 +36,10 @@ Sainmhíníonn an tsamhail S-57 faisnéis hidreagrafach trí úsáid a bhaint as
 
 ### S-57 Gnéithe agus Tréithe
 
-Féadfaidh níos mó ná 100 sraith a bheith i gcomhad amháin S-57. Sanntar gnéithe i gcomhad S-57 do shraith bunaithe ar ainm na haicme oibiachta (OBJL). Tá sraith tréithe réamhshainithe ag gach cineál gné i gcomhad S-57 mar atá sainmhínithe ag an gcaighdeán S-57. Is ainmneacha gearra iad seo ar féidir a bheith gaolmhar le hainmneacha níos faide agus níos brí leis an [S-57 object/attribute catalog](http://www.s-57.com).
+Féadfaidh níos mó ná 100 sraith a bheith i gcomhad amháin S-57. Sanntar gnéithe i gcomhad S-57 do shraith bunaithe ar ainm na haicme oibiachta (OBJL). Tá sraith tréithe réamhshainithe ag gach cineál gné i gcomhad S-57 mar atá sainmhínithe ag an gcaighdeán S-57. Is ainmneacha gearra iad seo ar féidir a bheith gaolmhar le hainmneacha níos faide agus níos brí leis an S-57 object/attribute catalog.
 
 Mar shampla, is féidir le haicme réad aerfoirt (AIRARE) na tréithe AIRARE, CATAIR, CONDTN, CONVIS, NOBJNM, OBJNAM, STATUS, INFORM, NINFOM, NTXTDS, PICREP, SCAMAX, SCAMIN, TXTDSC, RECDAT, RECIND, SORDAT, agus SORIND a bheith acu. Is féidir ainmneacha níos brí na n-ainmneacha gairide seo a fháil sa doiciméad S-57 nó sa chatalóg oibiachtaí/tréithe S-57.
 
 ## Tagairtí
 
 * [IHO S57 ENC](https://gdal.org/drivers/vector/s57.html)
-
-* [Catalóg Cuspóirí agus Tréithe S57](http://www.s-57.com)
-
-
