Fixed Relative URLs

--- a/lt/compression/b1.lt.md
+++ b/lt/compression/b1.lt.md
@@ -28,47 +28,26 @@ B1 failo formatas yra atviro archyvo formatas, kuris sujungia geriausius patikri
 B1 Free Archiver palaiko šiuos failų formatus.
 
 * b1
-
 * [zip](/compression/zip/)
-
-* [jar](/programavimas/jar/)
-
+* [jar](/programming/jar/)
 * xpi
-
 * [rar](/compression/rar/)
-
 * [7z](/compression/7z/)
-
 * [arj](/compression/arj/)
-
 * [bz2](/compression/bz2/)
-
-* Taksi
-
+* cab
 * [deb](/compression/deb/)
-
 * [gzip](/compression/gzip/)
-
 * [tgz](/compression/tgz/)
-
 * iso
-
 * [lzh](/compression/lzh/)
-
-*labai
-
+* lha
 * [lzma](/compression/lzma/)
-
 * [rpm](/compression/rpm/)
-
-* [dervas](/compression/der/)
-
+* [tar](/compression/tar/)
 * [xar](/compression/xar/)
-
 * [z](/compression/z/)
-
 * [dmg](/compression/dmg/) ir kt.
-
 
 B1 failai gali būti apsaugoti slaptažodžiu ir pagal numatytuosius nustatymus suglaudinami naudojant LZMA (Lempel-Ziv-Markov grandinės algoritmo) glaudinimą.
 
