Fixed Absolute URLs

--- a/lt/gis/000.lt.md
+++ b/lt/gis/000.lt.md
@@ -36,14 +36,10 @@ S-57 modelis apibrėžia hidrografinę informaciją, naudodamas aprašomųjų ir
 
 ### S-57 funkcijos ir atributai
 
-Viename S-57 faile gali būti daugiau nei 100 sluoksnių. S-57 failo funkcijos priskiriamos sluoksniui pagal objekto klasės pavadinimą (OBJL). Kiekvienas S-57 failo elemento tipas turi iš anksto nustatytą atributų rinkinį, kaip apibrėžta S-57 standarte. Tai trumpi vardai, kuriuos galima susieti su ilgesniais, prasmingesniais vardais naudojant [S-57 object/attribute catalog](http://www.s-57.com).
+Viename S-57 faile gali būti daugiau nei 100 sluoksnių. S-57 failo funkcijos priskiriamos sluoksniui pagal objekto klasės pavadinimą (OBJL). Kiekvienas S-57 failo elemento tipas turi iš anksto nustatytą atributų rinkinį, kaip apibrėžta S-57 standarte. Tai trumpi vardai, kuriuos galima susieti su ilgesniais, prasmingesniais vardais naudojant S-57 object/attribute catalog.
 
 Pavyzdžiui, oro uosto (AIRARE) objektų klasė gali turėti atributus AIRARE, CATAIR, CONDTN, CONVIS, NOBJNM, OBJNAM, STATUS, INFORM, NINFOM, NTXTDS, PICREP, SCAMAX, SCAMIN, TXTDSC, RECDAT, RECIND, SORDAT ir SORIND. Prasmingesnius šių trumpųjų pavadinimų pavadinimus galima rasti S-57 dokumente arba S-57 objektų/atributų kataloge.
 
 ## Nuorodos
 
 * [IHO S57 ENC](https://gdal.org/drivers/vector/s57.html)
-
-* [S57 objektų ir atributų katalogas](http://www.s-57.com)
-
-
