Fixed Relative URLs

--- a/lv/compression/b1.lv.md
+++ b/lv/compression/b1.lv.md
@@ -28,45 +28,25 @@ B1 faila formāts ir atvērts arhīva formāts, kas apvieno labākos pārbaudīt
 B1 Free Archiver atbalsta šādus failu formātus.
 
 * b1
-
 * [zip](/compression/zip/)
-
 * [jar](/programming/jar/)
-
 * xpi
-
 * [rar](/compression/rar/)
-
 * [7z](/compression/7z/)
-
 * [arj](/compression/arj/)
-
 * [bz2](/compression/bz2/)
-
-* taksis
-
+* cab
 * [deb](/compression/deb/)
-
 * [gzip](/compression/gzip/)
-
 * [tgz](/compression/tgz/)
-
 * iso
-
 * [lzh](/compression/lzh/)
-
 * lha
-
 * [lzma](/compression/lzma/)
-
 * [rpm](/compression/rpm/)
-
-* [darva](/compression/darva/)
-
+* [tar](/compression/tar/)
 * [xar](/compression/xar/)
-
 * [z](/compression/z/)
-
 * [dmg](/compression/dmg/) un citi.
 
 
