Fixed Absolute URLs

--- a/lv/gis/000.lv.md
+++ b/lv/gis/000.lv.md
@@ -36,14 +36,9 @@ S-57 modelis nosaka hidrogrāfisko informāciju, izmantojot aprakstošo un telpi
 
 ### S-57 līdzekļi un atribūti
 
-Viens S-57 fails var saturēt vairāk nekā 100 slāņus. S-57 faila līdzekļi tiek piešķirti slānim, pamatojoties uz objekta klases nosaukumu (OBJL). Katram līdzekļa veidam S-57 failā ir iepriekš noteikta atribūtu kopa, kā noteikts S-57 standartā. Šie ir īsie nosaukumi, kurus var saistīt ar garākiem, jēgpilnākiem nosaukumiem, izmantojot [S-57 object/attribute catalog](http://www.s-57.com).
+Viens S-57 fails var saturēt vairāk nekā 100 slāņus. S-57 faila līdzekļi tiek piešķirti slānim, pamatojoties uz objekta klases nosaukumu (OBJL). Katram līdzekļa veidam S-57 failā ir iepriekš noteikta atribūtu kopa, kā noteikts S-57 standartā. Šie ir īsie nosaukumi, kurus var saistīt ar garākiem, jēgpilnākiem nosaukumiem, izmantojot S-57 object/attribute catalog.
 
 Piemēram, lidostas (AIRARE) objektu klasei var būt atribūti AIRARE, CATAIR, CONDTN, CONVIS, NOBJNM, OBJNAM, STATUS, INFORM, NINFOM, NTXTDS, PICREP, SCAMAX, SCAMIN, TXTDSC, RECDAT, RECIND, SORDAT un SORIND. Šo īso nosaukumu jēgpilnākos nosaukumus var atrast S-57 dokumentā vai S-57 objektu/atribūtu katalogā.
 
 ## Atsauces
-
 * [IHO S57 ENC](https://gdal.org/drivers/vector/s57.html)
-
-* [S57 objektu un atribūtu katalogs](http://www.s-57.com)
-
-
