Fixed Relative URLs

--- a/az/compression/b1.az.md
+++ b/az/compression/b1.az.md
@@ -28,47 +28,26 @@ B1 fayl formatı faylların sıxılması üçün ən yaxşı sübut edilmiş hə
 B1 Free Archiver aşağıdakı fayl formatlarını dəstəkləyir.
 
 * b1
-
-* [zip](/sıxılma/zip/)
-
-* [jar](/proqramlaşdırma/jar/)
-
+* [zip](/compression/zip/)
+* [jar](/programming/jar/)
 * xpi
-
-* [rar](/sıxılma/rar/)
-
-* [7z](/sıxılma/7z/)
-
-* [arj](/sıxılma/arj/)
-
-* [bz2](/sıxılma/bz2/)
-
-* kabinə
-
-* [deb](/sıxılma/deb/)
-
+* [rar](/compression/rar/)
+* [7z](/compression/7z/)
+* [arj](/compression/arj/)
+* [bz2](/compression/bz2/)
+* cab
+* [deb](/compression/deb/)
 * [gzip](/compression/gzip/)
-
-* [tgz](/sıxılma/tgz/)
-
+* [tgz](/compression/tgz/)
 * iso
-
-* [lzh](/sıxılma/lzh/)
-
+* [lzh](/compression/lzh/)
 * lha
-
-* [lzma](/sıxılma/lzma/)
-
-* [rpm](/sıxılma/rpm/)
-
-* [tar](/sıxılma/tar/)
-
-* [xar](/sıxılma/xar/)
-
-* [z](/sıxılma/z/)
-
-* [dmg](/compression/dmg/) və s.
-
+* [lzma](/compression/lzma/)
+* [rpm](/compression/rpm/)
+* [tar](/compression/tar/)
+* [xar](/compression/xar/)
+* [z](/compression/z/)
+* [dmg](/compression/dmg/) and others.
 
 B1 faylları parolla qoruna bilər və standart olaraq LZMA (Lempel-Ziv-Markov zəncir alqoritmi) sıxılması ilə sıxılır.
 
