Fixed Absolute URLs

--- a/az/compression/r2.az.md
+++ b/az/compression/r2.az.md
@@ -58,6 +58,4 @@ WinRAR çoxcildlik arxivinin formatı RAR-dır (Roshal Arxivi). RAR, Eugene Rosh
 RAR formatı birdən çox fayl və qovluqların bir arxiv faylına sıxılmasını və arxivləşdirilməsini dəstəkləyir. Böyük arxiv WinRAR-dan istifadə edərək çoxsaylı cildlərə bölündükdə, hər bir cild adətən unikal fayl uzantısı təyin edilir, məsələn, .rar, .r00, .r01 və s. Bu fərdi həcmli fayllar birlikdə çoxcildlik arxivi təşkil edir.
 
 ## İstinadlar
-* [RAR (fayl formatı)](https://en.wikipedia.org/wiki/RAR_(fayl_formatı))
-
-
+* [RAR (file format)](https://en.wikipedia.org/wiki/RAR_(file_format))
