ar - Fixed Absolute URLs

--- a/ar/gis/000.ar.md
+++ b/ar/gis/000.ar.md
@@ -27,11 +27,10 @@
 
 ### ميزات وسمات S-57
 
-قد يحتوي ملف S-57 واحد على أكثر من 100 طبقة. يتم تعيين الميزات في ملف S-57 إلى طبقة بناءً على اسم فئة الكائن (OBJL). يحتوي كل نوع ميزة في ملف S-57 على مجموعة محددة مسبقًا من السمات على النحو المحدد بواسطة معيار S-57. هذه أسماء قصيرة يمكن أن ترتبط بأسماء أطول وأكثر وضوحًا باستخدام كتالوج كائن / سمات [S-57](http://www.s-57.com).
+قد يحتوي ملف S-57 واحد على أكثر من 100 طبقة. يتم تعيين الميزات في ملف S-57 إلى طبقة بناءً على اسم فئة الكائن (OBJL). يحتوي كل نوع ميزة في ملف S-57 على مجموعة محددة مسبقًا من السمات على النحو المحدد بواسطة معيار S-57. هذه أسماء قصيرة يمكن أن ترتبط بأسماء أطول وأكثر وضوحًا باستخدام كتالوج كائن / سمات S-57.
 
 على سبيل المثال ، يمكن أن تحتوي فئة كائن airport (AIRARE) على سمات AIRARE و CATAIR و CONDTN و CONVIS و NOBJNM و OBJNAM و STATUS و INFORM و NINFOM و NTXTDS و PICREP و SCAMAX و SCAMIN و TXTDSC و RECDAT و RECIND و SORDDAT و SORINDAT. يمكن العثور على الأسماء الأكثر دلالة لهذه الأسماء القصيرة في مستند S-57 أو كتالوج كائن / سمة S-57.
 
 ## مراجع
 
 * [IHO S57 ENC](https://gdal.org/drivers/vector/s57.html)
-* [كتالوج كائنات وسمات S57](http://www.s-57.com)
