bn - Fixed Relative URLs

--- a/bn/compression/b1.bn.md
+++ b/bn/compression/b1.bn.md
@@ -28,45 +28,25 @@ B1 ফাইল ফরম্যাট হল একটি ওপেন আর্
 B1 Free Archiver নিম্নলিখিত ফাইল ফরম্যাট সমর্থন করে।
 
 * b1
-
-* [জিপ](/কম্প্রেশন/জিপ/)
-
-* [জার](/প্রোগ্রামিং/জার/)
-
+* [zip](/compression/zip/)
+* [jar](/programming/jar/)
 * xpi
-
 * [rar](/compression/rar/)
-
-* [7z](/কম্প্রেশন/7z/)
-
-* [আরজ](/কম্প্রেশন/আরজে/)
-
-* [বিজেড২](/কম্প্রেশন/বিজেড২/)
-
-* ট্যাক্সি
-
-* [দেব](/কম্প্রেশন/দেব/)
-
-* [জিজিপ](/কম্প্রেশন/জিজিপ/)
-
+* [7z](/compression/7z/)
+* [arj](/compression/arj/)
+* [bz2](/compression/bz2/)
+* cab
+* [deb](/compression/deb/)
+* [gzip](/compression/gzip/)
 * [tgz](/compression/tgz/)
-
-* আইএসও
-
-* [lzh](/কম্প্রেশন/lzh/)
-
+* iso
+* [lzh](/compression/lzh/)
 * lha
-
 * [lzma](/compression/lzma/)
-
-* [আরপিএম](/কম্প্রেশন/আরপিএম/)
-
-* [টার](/কম্প্রেশন/টার/)
-
-* [xar](/কম্প্রেশন/xar/)
-
-* [z](/কম্প্রেশন/z/)
-
+* [rpm](/compression/rpm/)
+* [tar](/compression/tar/)
+* [xar](/compression/xar/)
+* [z](/compression/z/)
 * [dmg](/compression/dmg/) এবং অন্যান্য।
 
 
