bn - Fixed Absolute URLs

--- a/bn/gis/000.bn.md
+++ b/bn/gis/000.bn.md
@@ -36,14 +36,10 @@ S-57 মডেল বর্ণনামূলক এবং স্থানিক
 
 ### S-57 বৈশিষ্ট্য এবং গুণাবলী
 
-একটি একক S-57 ফাইলে 100 টিরও বেশি স্তর থাকতে পারে। একটি S-57 ফাইলের বৈশিষ্ট্যগুলি অবজেক্ট ক্লাসের (OBJL) নামের উপর ভিত্তি করে একটি স্তরে বরাদ্দ করা হয়। একটি S-57 ফাইলের প্রতিটি বৈশিষ্ট্যের ধরণে S-57 স্ট্যান্ডার্ড দ্বারা সংজ্ঞায়িত বৈশিষ্ট্যগুলির একটি পূর্বনির্ধারিত সেট রয়েছে। এগুলি ছোট নাম যা [S-57 object/attribute catalog](http://www.s-57.com) ব্যবহার করে দীর্ঘ, আরও অর্থপূর্ণ নামের সাথে সম্পর্কিত হতে পারে।
+একটি একক S-57 ফাইলে 100 টিরও বেশি স্তর থাকতে পারে। একটি S-57 ফাইলের বৈশিষ্ট্যগুলি অবজেক্ট ক্লাসের (OBJL) নামের উপর ভিত্তি করে একটি স্তরে বরাদ্দ করা হয়। একটি S-57 ফাইলের প্রতিটি বৈশিষ্ট্যের ধরণে S-57 স্ট্যান্ডার্ড দ্বারা সংজ্ঞায়িত বৈশিষ্ট্যগুলির একটি পূর্বনির্ধারিত সেট রয়েছে। এগুলি ছোট নাম যা S-57 object/attribute catalog ব্যবহার করে দীর্ঘ, আরও অর্থপূর্ণ নামের সাথে সম্পর্কিত হতে পারে।
 
 উদাহরণস্বরূপ, বিমানবন্দর (AIRARE) অবজেক্ট ক্লাসে AIRARE, CATAIR, CONDTN, CONVIS, NOBJNM, OBJNAM, STATUS, INFORM, NINFOM, NTXTDS, PICREP, SCAMAX, SCAMIN, TXTDSC, RECDAT, SCAMIN, TXTDSC, RECDAT, RECINDSORD, এবং রিসিন্ড্রিবিউটেশন থাকতে পারে৷ এই ছোট নামের আরও অর্থপূর্ণ নামগুলি S-57 নথিতে বা S-57 অবজেক্ট/অ্যাট্রিবিউট ক্যাটালগে পাওয়া যাবে।
 
 ## তথ্যসূত্র
 
 * [IHO S57 ENC](https://gdal.org/drivers/vector/s57.html)
-
-* [S57 অবজেক্ট এবং অ্যাট্রিবিউটস ক্যাটালগ](http://www.s-57.com)
-
-
