Fixed Relative URLs

--- a/cs/misc/h4.cs.md
+++ b/cs/misc/h4.cs.md
@@ -39,7 +39,7 @@ Soubor HDF4 nebo H4 je jako kontejner, který se skládá z heterogenních datov
 * Tabulky
 * Textové prvky
 * Grafy
-* Dokumenty jako [PDF](/cs/pdf/) a [dokumenty Excel](/cs/tabulkový procesor/)
+* Dokumenty jako [PDF](/cs/pdf/) a [dokumenty Excel](/cs/spreadsheet/)
 
 ## Prohlížeč souborů H4
 
