--- a/cs/misc/h5.cs.md
+++ b/cs/misc/h5.cs.md
@@ -33,7 +33,7 @@ Soubory H5 se běžně používají v letectví, fyzice, strojírenství, financ
 
 ### Datový model HDF5
 
-Soubor HDF5 je jako kontejner, který se skládá z heterogenních datových objektů. Tyto datové sady mohou být například obrázky, tabulky, textové prvky, grafy a dokonce i dokumenty jako [PDF](/cs/pdf/) a [dokumenty Excelu](/cs/tabulkový procesor/).
+Soubor HDF5 je jako kontejner, který se skládá z heterogenních datových objektů. Tyto datové sady mohou být například obrázky, tabulky, textové prvky, grafy a dokonce i dokumenty jako [PDF](/cs/pdf/) a [dokumenty Excelu](/cs/spreadsheet/).
 
 ## Prohlížeč souborů H5
 
