cs - Fixed Absolute URLs

--- a/cs/gis/000.cs.md
+++ b/cs/gis/000.cs.md
@@ -27,11 +27,10 @@ Model S-57 definuje hydrografické informace pomocí kombinace popisných a pros
 
 ### S-57 Vlastnosti a atributy
 
-Jeden soubor S-57 může obsahovat více než 100 vrstev. Prvky v souboru S-57 jsou přiřazeny vrstvě na základě názvu třídy objektů (OBJL). Každý typ prvku v souboru S-57 má předdefinovanou sadu atributů, jak jsou definovány standardem S-57. Jedná se o krátké názvy, které lze spojit s delšími a smysluplnějšími názvy pomocí [katalogu objektů/atributů S-57](http://www.s-57.com).
+Jeden soubor S-57 může obsahovat více než 100 vrstev. Prvky v souboru S-57 jsou přiřazeny vrstvě na základě názvu třídy objektů (OBJL). Každý typ prvku v souboru S-57 má předdefinovanou sadu atributů, jak jsou definovány standardem S-57. Jedná se o krátké názvy, které lze spojit s delšími a smysluplnějšími názvy pomocí katalogu objektů/atributů S-57.
 
 Třída objektu letiště (AIRARE) může mít například atributy AIRARE, CATAIR, CONDTN, CONVIS, NOBJNM, OBJNAM, STATUS, INFORM, NINFOM, NTXTDS, PICREP, SCAMAX, SCAMIN, TXTDSC, RECDAT, RECIND, SORDAT a SORIND. Smysluplnější názvy těchto krátkých názvů lze nalézt v dokumentu S-57 nebo v katalogu objektů/atributů S-57.
 
 ## Reference
 
 * [IHO S57 ENC](https://gdal.org/drivers/vector/s57.html)
-* [Katalog objektů a atributů S57](http://www.s-57.com)
