el - Fixed Relative URLs

--- a/el/misc/h4.el.md
+++ b/el/misc/h4.el.md
@@ -39,7 +39,7 @@
 * Τραπέζια
 * Στοιχεία κειμένου
 * Γραφικές παραστάσεις
-* Έγγραφα όπως [PDF](/el/pdf/) και [έγγραφα Excel](/el/υπολογιστικό φύλλο/)
+* Έγγραφα όπως [PDF](/el/pdf/) και [έγγραφα Excel](/el/spreadsheet/)
 
 ## Προβολή αρχείων H4
 
