es - Fixed Relative URLs

--- a/es/misc/h4.es.md
+++ b/es/misc/h4.es.md
@@ -39,7 +39,7 @@ El archivo HDF4 o H4 es como un contenedor que consta de objetos de datos hetero
 * Mesas
 * Elementos de texto
 * Gráficos
-* Documentos como [PDF](/es/pdf/) y [documentos de Excel](/es/hoja de cálculo/)
+* Documentos como [PDF](/es/pdf/) y [documentos de Excel](/es/spreadsheet/)
 
 ## Visor de archivos H4
 
