--- a/es/misc/h5.es.md
+++ b/es/misc/h5.es.md
@@ -33,7 +33,7 @@ Los archivos H5 se usan comúnmente en la industria aeroespacial, la física, la
 
 ### Modelo de datos HDF5
 
-El archivo HDF5 es como un contenedor que se compone de objetos de datos heterogéneos. Por ejemplo, estos conjuntos de datos pueden ser imágenes, tablas, elementos de texto, gráficos e incluso documentos como [PDF](/es/pdf/) y [documentos de Excel](/es/hoja de cálculo/).
+El archivo HDF5 es como un contenedor que se compone de objetos de datos heterogéneos. Por ejemplo, estos conjuntos de datos pueden ser imágenes, tablas, elementos de texto, gráficos e incluso documentos como [PDF](/es/pdf/) y [documentos de Excel](/es/spreadsheet/).
 
 ## Visor de archivos H5
 
