it - Fixed Relative URLs

--- a/it/misc/h4.it.md
+++ b/it/misc/h4.it.md
@@ -39,7 +39,7 @@ Il file HDF4 o H4 è come un contenitore costituito da oggetti dati eterogenei. 
 * Tabelle
 * Elementi di testo
 * Grafici
-* Documenti come [PDF](/it/pdf/) e [Documenti Excel](/it/foglio di calcolo/)
+* Documenti come [PDF](/it/pdf/) e [Documenti Excel](/it/spreadsheet/)
 
 ## Visualizzatore di file H4
 
