--- a/it/misc/h5.it.md
+++ b/it/misc/h5.it.md
@@ -33,7 +33,7 @@ I file H5 sono comunemente usati nei settori aerospaziale, fisica, ingegneria, f
 
 ### Modello dati HDF5
 
-Il file HDF5 è come un contenitore che comprende oggetti dati eterogenei. Ad esempio, questi set di dati possono essere immagini, tabelle, elementi di testo, grafici e persino documenti come [PDF](/it/pdf/) e [Documenti Excel](/it/foglio di calcolo/).
+Il file HDF5 è come un contenitore che comprende oggetti dati eterogenei. Ad esempio, questi set di dati possono essere immagini, tabelle, elementi di testo, grafici e persino documenti come [PDF](/it/pdf/) e [Documenti Excel](/it/spreadsheet/).
 
 ## Visualizzatore di file H5
 
