--- a/he/gis/000.he.md
+++ b/he/gis/000.he.md
@@ -27,12 +27,10 @@
 
 ### תכונות ותכונות של S-57
 
-קובץ S-57 בודד עשוי להכיל יותר מ-100 שכבות. תכונות בקובץ S-57 מוקצות לשכבה המבוססת על שם מחלקת האובייקט (OBJL). לכל סוג תכונה בקובץ S-57 יש קבוצה מוגדרת מראש של תכונות כפי שהוגדרה בתקן S-57. אלו הם שמות קצרים שיכולים להיות קשורים לשמות ארוכים ומשמעותיים יותר באמצעות [קטלוג S-57 object/attribute](http://www.s-57.com).
+קובץ S-57 בודד עשוי להכיל יותר מ-100 שכבות. תכונות בקובץ S-57 מוקצות לשכבה המבוססת על שם מחלקת האובייקט (OBJL). לכל סוג תכונה בקובץ S-57 יש קבוצה מוגדרת מראש של תכונות כפי שהוגדרה בתקן S-57. אלו הם שמות קצרים שיכולים להיות קשורים לשמות ארוכים ומשמעותיים יותר באמצעות קטלוג S-57 object/attribute.
 
 לדוגמה, מחלקת אובייקטים של שדה תעופה (AIRARE) יכולה לכלול את התכונות AIRARE, CATAIR, CONDTN, CONVIS, NOBJNM, OBJNAM, STATUS, INFORM, NINFOM, NTXTDS, PICREP, SCAMAX, SCAMIN, TXTDSC, RECDAT, RECIND, SORDAT ו-SORIND. ניתן למצוא את השמות המשמעותיים יותר של השמות הקצרים הללו במסמך S-57 או בקטלוג האובייקטים/תכונות S-57.
 
 ## הפניות
 
 * [IHO S57 ENC](https://gdal.org/drivers/vector/s57.html)
-* [קטלוג אובייקטים ותכונות S57](http://www.s-57.com)
-
