hi - Fixed Absolute URLs

--- a/hi/programming/f95.hi.md
+++ b/hi/programming/f95.hi.md
@@ -40,6 +40,4 @@ gfortran -o my_program my_program.f95
 यदि आप केवल F95 फ़ाइल की सामग्री देखना चाहते हैं, तो यह एक सादा पाठ फ़ाइल है, इसलिए आप इसे किसी भी पाठ संपादक के साथ खोल सकते हैं।
 
 ## संदर्भ
-* [जीएनयू फोरट्रान](https://en.wikipedia.org/wiki/GNU_Fortrans)
-
-
+* [GNU Fortran](https://en.wikipedia.org/wiki/GNU_Fortran)
