hu - Fixed Absolute URLs

--- a/hu/gis/000.hu.md
+++ b/hu/gis/000.hu.md
@@ -27,12 +27,11 @@ Az S-57 modell a vízrajzi információkat leíró és térbeli jellemzők kombi
 
 ### S-57 jellemzői és jellemzői
 
-Egyetlen S-57 fájl több mint 100 réteget tartalmazhat. Az S-57 fájlban lévő szolgáltatások az objektumosztály (OBJL) neve alapján vannak hozzárendelve egy fóliához. Az S-57 fájlban lévő minden jellemzőtípus rendelkezik az S-57 szabvány által meghatározott, előre meghatározott attribútumkészlettel. Ezek rövid nevek, amelyek az [S-57 objektum/attribútum-katalógus](http://www.s-57.com) segítségével hosszabb, értelmesebb nevekkel hozhatók kapcsolatba.
+Egyetlen S-57 fájl több mint 100 réteget tartalmazhat. Az S-57 fájlban lévő szolgáltatások az objektumosztály (OBJL) neve alapján vannak hozzárendelve egy fóliához. Az S-57 fájlban lévő minden jellemzőtípus rendelkezik az S-57 szabvány által meghatározott, előre meghatározott attribútumkészlettel. Ezek rövid nevek, amelyek az S-57 objektum/attribútum-katalógus segítségével hosszabb, értelmesebb nevekkel hozhatók kapcsolatba.
 
 Például egy repülőtér (AIRARE) objektumosztály rendelkezhet AIRARE, CATAIR, CONDTN, CONVIS, NOBJNM, OBJNAM, STATUS, INFORM, NINFOM, NTXTDS, PICREP, SCAMAX, SCAMIN, TXTDSC, RECDAT, RECIND, SORDAT és SORIND attribútumokkal. E rövid nevek értelmesebb nevei az S-57 dokumentumban vagy az S-57 objektum/attribútum katalógusban találhatók.
 
 ## Hivatkozások
 
 * [IHO S57 ENC](https://gdal.org/drivers/vector/s57.html)
-* [S57 objektumok és attribútumok katalógusa](http://www.s-57.com)
 
