id - Fixed Absolute URLs

--- a/id/gis/000.id.md
+++ b/id/gis/000.id.md
@@ -27,12 +27,11 @@ Model S-57 mendefinisikan informasi hidrografi menggunakan kombinasi karakterist
 
 ### S-57 Fitur dan Atribut
 
-Satu file S-57 dapat berisi lebih dari 100 lapisan. Fitur dalam file S-57 ditugaskan ke lapisan berdasarkan nama kelas objek (OBJL). Setiap tipe fitur dalam file S-57 memiliki serangkaian atribut yang ditentukan sebelumnya seperti yang ditentukan oleh standar S-57. Ini adalah nama pendek yang dapat dikaitkan dengan nama yang lebih panjang dan lebih bermakna menggunakan [katalog objek/atribut S-57](http://www.s-57.com).
+Satu file S-57 dapat berisi lebih dari 100 lapisan. Fitur dalam file S-57 ditugaskan ke lapisan berdasarkan nama kelas objek (OBJL). Setiap tipe fitur dalam file S-57 memiliki serangkaian atribut yang ditentukan sebelumnya seperti yang ditentukan oleh standar S-57. Ini adalah nama pendek yang dapat dikaitkan dengan nama yang lebih panjang dan lebih bermakna menggunakan katalog objek/atribut S-57.
 
 Misalnya, kelas objek bandara (AIRARE) dapat memiliki atribut AIRARE, CATAIR, CONDTN, CONVIS, NOBJNM, OBJNAM, STATUS, INFORM, NINFOM, NTXTDS, PICREP, SCAMAX, SCAMIN, TXTDSC, RECDAT, RECIND, SORDAT, dan SORIND. Nama yang lebih bermakna dari nama pendek ini dapat ditemukan di dokumen S-57 atau katalog objek/atribut S-57.
 
 ## Referensi
 
 * [IHO S57 ENC](https://gdal.org/drivers/vector/s57.html)
-* [Katalog Objek dan Atribut S57](http://www.s-57.com)
 
