ja - Fixed Absolute URLs

--- a/ja/gis/000.ja.md
+++ b/ja/gis/000.ja.md
@@ -27,12 +27,10 @@ S-57 モデルは、記述的特性と空間的特性の組み合わせを使用
 
 ### S-57の特徴と属性
 
-1 つの S-57 ファイルには、100 を超えるレイヤーが含まれる場合があります。 S-57 ファイル内のフィーチャは、オブジェクト クラス (OBJL) の名前に基づいて画層に割り当てられます。 S-57 ファイルの各フィーチャ タイプには、S-57 規格で定義されている定義済みの一連の属性があります。これらは、[S-57 オブジェクト/属性カタログ](http://www.s-57.com) を使用して、より長く意味のある名前に関連付けることができる短い名前です。
+1 つの S-57 ファイルには、100 を超えるレイヤーが含まれる場合があります。 S-57 ファイル内のフィーチャは、オブジェクト クラス (OBJL) の名前に基づいて画層に割り当てられます。 S-57 ファイルの各フィーチャ タイプには、S-57 規格で定義されている定義済みの一連の属性があります。これらは、S-57 オブジェクト/属性カタログ を使用して、より長く意味のある名前に関連付けることができる短い名前です。
 
 たとえば、空港 (AIRARE) オブジェクト クラスは、AIRARE、CATAIR、CONDTN、CONVIS、NOBJNM、OBJNAM、STATUS、INFORM、NINFOM、NTXTDS、PICREP、SCAMAX、SCAMIN、TXTDSC、RECDAT、RECIND、SORDAT、および SORIND 属性を持つことができます。これらの短い名前のより意味のある名前は、S-57 ドキュメントまたは S-57 オブジェクト/属性カタログで見つけることができます。
 
 ## 参考文献
 
 * [IHO S57 ENC](https://gdal.org/drivers/vector/s57.html)
-* [S57 オブジェクトと属性カタログ](http://www.s-57.com)
-
