nl - Fixed Absolute URLs

--- a/nl/gis/000.nl.md
+++ b/nl/gis/000.nl.md
@@ -27,11 +27,10 @@ Het S-57-model definieert hydrografische informatie met behulp van een combinati
 
 ### S-57 Functies en attributen
 
-Een enkel S-57-bestand kan meer dan 100 lagen bevatten. Objecten in een S-57-bestand worden toegewezen aan een laag op basis van de naam van de objectklasse (OBJL). Elk kenmerktype in een S-57-bestand heeft een vooraf gedefinieerde set attributen zoals gedefinieerd door de S-57-standaard. Dit zijn korte namen die gerelateerd kunnen worden aan langere, betekenisvollere namen met behulp van de [S-57 object/attribuutcatalogus](http://www.s-57.com).
+Een enkel S-57-bestand kan meer dan 100 lagen bevatten. Objecten in een S-57-bestand worden toegewezen aan een laag op basis van de naam van de objectklasse (OBJL). Elk kenmerktype in een S-57-bestand heeft een vooraf gedefinieerde set attributen zoals gedefinieerd door de S-57-standaard. Dit zijn korte namen die gerelateerd kunnen worden aan langere, betekenisvollere namen met behulp van de S-57 object/attribuutcatalogus.
 
 De objectklasse airport (AIRARE) kan bijvoorbeeld de kenmerken AIRARE, CATAIR, CONDTN, CONVIS, NOBJNM, OBJNAM, STATUS, INFORM, NINFOM, NTXTDS, PICREP, SCAMAX, SCAMIN, TXTDSC, RECDAT, RECIND, SORDAT en SORIND hebben. De meer betekenisvolle namen van deze korte namen zijn te vinden in het S-57-document of de S-57 object-/attribuutcatalogus.
 
 ## Referenties
 
 * [IHO S57 ENC](https://gdal.org/drivers/vector/s57.html)
-* [S57 Objecten- en attributencatalogus](http://www.s-57.com)
